--- a/projectfirst/src/app/app.component.html
+++ b/projectfirst/src/app/app.component.html
@@ -1,2 +1,7 @@
+<title>Bem vindo!</title>
 <h1>{{nomeDois}}</h1>
 <meu-primeiro-component></meu-primeiro-component>
+
+<h2>{{sobrenome + 2 + " chupa cabra" + "aaa"}}</h2>
+<app-primeiro-component2></app-primeiro-component2>
+
