--- a/projectfirst/src/app/app.component.html
+++ b/projectfirst/src/app/app.component.html
@@ -4,4 +4,4 @@
 
 <h2>{{sobrenome + 2 + " chupa cabra" + "aaa"}}</h2>
 <app-primeiro-component2></app-primeiro-component2>
-
+<app-cursos></app-cursos> 
