--- a/projectfirst/src/app/cursos/cursos.component.html
+++ b/projectfirst/src/app/cursos/cursos.component.html
@@ -1,3 +1,8 @@
-<p>cursos copmonents!</p>
+<p>listas de cursos {{nomePortal}} </p>
+
+
+<ul>
+    <li *ngFor="let curso of nomes">{{curso}}</li>
+</ul>
 
 <app-cursos-detaalhe></app-cursos-detaalhe>
