--- a/projectfirst/src/app/data-dinbind/data-dinbind.component.html
+++ b/projectfirst/src/app/data-dinbind/data-dinbind.component.html
@@ -1,5 +1,10 @@
 <section>
     <article>
         <h3>INTERPOLAÇÃO</h3>
+        <p>string <a href={{url}}>google!!!</a></p> 
+        <p>string <a [href]="url">google!!!</a></p> 
+
+        <h1>{{nomeC}}</h1>
+        <img [src]=imagem alt="fotos">
     </article>
 </section>
